# ArabicCompiler

./: .gitignore  CODEBASE_CONSOLIDATION_GUIDE.md  IDE_Research.md  LICENSE  ProjectReview.md  README.md  README_macOS.md  RTL_Implementation_Report.md  SETUP_COMPLETE.md  compile_arabic.sh  concat_sources.ps1  concat_sources.sh  project_codebase.md  run_all_tests.sh
ArabicIDE.CrossPlatform/: App.axaml  App.axaml.cs  ArabicIDE.CrossPlatform.csproj  ArabicSyntax.xshd  Program.cs  README.md  ViewLocator.cs  app.manifest
ArabicIDE.CrossPlatform/Services/: CompilerService.cs  FileService.cs  ICompilerService.cs  IFileService.cs
ArabicIDE.CrossPlatform/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
ArabicIDE.CrossPlatform/Views/: MainWindow.axaml  MainWindow.axaml.cs
Compiler/: ArabicCompiler_mac  CMakeLists.txt  build.bat  build.sh
Compiler/src/: AST.cpp  AST.h  Compiler.cpp  Compiler.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
Compiler/tests/: RunOne.cmake  test_grammar_rules.cpp
Examples/: array_test.arabic  calculator.arabic  calculator_output.asm  calculator_output.c  calculator_output_intermediate.txt  conditions.arabic  example1.arabic  example1.asm  example1.c  example1_intermediate.txt  example2.arabic  example2.asm  example2.c  example2_intermediate.txt  example3.arabic  example3.asm  example3.c  example3_intermediate.txt  for_loop.arabic  for_loop_output.c  hello.arabic  hello_output.c  hello_output_intermediate.txt  loops.arabic  type_test.arabic  غير_مسمى.arabic
Examples/Ready/: 01_basic_program.arabic  01_basic_program_output.asm  02_variables_and_types.arabic  04_comparison_operators.arabic  11_simple_procedure.arabic  array_test.arabic  conditions.arabic  example2.arabic  example3.arabic  غير_مسمى.arabic
IDE/: ArabicIDE.csproj  MainForm.cs  Program.cs  test_tmp.arabic
PoCs/ArabicIDE.Avalonia/: App.axaml  App.axaml.cs  ArabicIDE.Avalonia.csproj  Program.cs  ViewLocator.cs  app.manifest
PoCs/ArabicIDE.Avalonia/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
PoCs/ArabicIDE.Avalonia/Views/: MainWindow.axaml  MainWindow.axaml.cs
Tests/: test_01_program_structure.arabic  test_01_program_structure_output.asm  test_02_constants.arabic  test_02_constants_output.asm  test_03_arrays.arabic  test_03_arrays_output.asm  test_04_records.arabic  test_04_records_output.asm  test_05_procedures.arabic  test_05_procedures_output.asm  test_06_if_else.arabic  test_06_if_else_output.asm  test_07_while_loop.arabic  test_07_while_loop_output.asm  test_08_for_loop.arabic  test_08_for_loop_output.asm  test_09_repeat_until.arabic  test_09_repeat_until_output.asm  test_10_expressions.arabic  test_10_expressions_output.asm  test_11_values_and_literals.arabic  test_11_values_and_literals_output.asm  test_comprehensive_all_rules.arabic  test_comprehensive_all_rules_output.asm  test_lexer_comprehensive.arabic  test_lexer_comprehensive_output.asm  test_rule_10_expressions.arabic  test_rule_10_expressions_output.asm  test_rule_11_values_and_literals.arabic  test_rule_11_values_and_literals_output.asm  test_rule_1_program_structure.arabic  test_rule_1_program_structure_output.asm  test_rule_2_constants.arabic  test_rule_2_constants_output.asm  test_rule_3_types_arrays.arabic  test_rule_3_types_arrays_output.asm  test_rule_4_types_records.arabic  test_rule_4_types_records_output.asm  test_rule_5_variables.arabic  test_rule_5_variables_output.asm  (+8 more)
Tests_reports/: 00_READ_ME_FIRST.txt  00_START_HERE.md  ACTIONS_TAKEN.md  CHANGES_SUMMARY.md  COMPILER_REVIEW_ANALYSIS.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  COMPREHENSIVE_REBUILD_PLAN.md  COMPREHENSIVE_TEST_MATRIX.md  CONCLUSION.md  CURRENT_STATUS.md  DELIVERABLES.md  DELIVERABLES_SUMMARY.txt  DETAILED_GRAMMAR_ISSUES.md  DETAILED_TEST_DOCUMENTATION.md  EXAMPLES_COMPLETION_REPORT.md  EXAMPLES_INDEX.md  EXAMPLES_QUICK_START.md  EXAMPLES_UPDATE_SUMMARY.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_AR.md  FEATURES_DOCUMENTATION.md  FILES_LIST.md  FINAL_CHECKLIST.md  FINAL_COMPLETION_REPORT.md  FINAL_COMPLETION_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_DELIVERY.md  FINAL_DELIVERY_CHECKLIST.md  FINAL_EXAMPLES_SUMMARY.md  FINAL_EXECUTIVE_SUMMARY.md  FINAL_GRAMMAR_COMPLIANCE_REPORT.md  FINAL_IDE_SUMMARY.md  FINAL_MESSAGE.txt  FINAL_PROJECT_SUMMARY.md  FINAL_REPORT.md  FINAL_REPORT.txt  FINAL_REPORT_COMPREHENSIVE.md  FINAL_STATUS.md  FINAL_STATUS.txt  (+97 more)
build_tests_expected/: conditions_output.asm  conditions_output.c  conditions_output_intermediate.txt  hello_output.asm  loops_output.asm  loops_output.c  loops_output_intermediate.txt
scripts/: run_all_examples_simple.ps1  run_end_to_end.ps1  run_examples_tests.ps1  run_generated_c_examples.ps1
التقرير (Report)/: المترجم العربي -  عرض تقديمي.pptx  قواعد اللغة .txt
